# wireframe-detector

./: .gitignore  README.md  pyproject.toml  setup.cfg
LICENSES/: HAWP_LICENSE  LICENSE
models/: hawp_utils.py  wireframe_net.py
scripts/: inference.py
